--- a/Beta_deployment/infopage.html
+++ b/Beta_deployment/infopage.html
@@ -8,10 +8,32 @@
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
         <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-        <title></title>
+        <title>Midnight Movie Massacre</title>
     </head>
     <body style="background-color: black">
-      <h5>Midnight Movie Massacre</h5>
-      
+      <h1><a href="">Midnight Movie Massacre</a></h1>
+      <h3>By Groundbreak</h3>
+      <p>
+      <ul>
+        <li>Kamillah Hasham</li>
+        <li>Lisa Bourque</li>
+        <li>Cheyenne Hatter</li>
+        <li>Breanne Sjodin</li>
+        <li>Boris Nedev</li>
+        <li>Akshat Pandey</li>
+        <li>Jylee Halsted</li>
+        <li>Aiden Batten</li>
+      </ul>
+      <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
+      <a href="">Survey</a>
+    </p>
     </body>
+    <style>
+    body {
+      color: white;
+      text-align: center;
+    }
+
+    </style>
 </html>
+
