--- a/Beta_deployment/infopage.html
+++ b/Beta_deployment/infopage.html
@@ -32,7 +32,7 @@
     body {
       color: white;
       text-align: center;
-      font-family: Courier;
+      font-family: "fonts/mplus-1m-regular.ttf";
     }
 
     </style>
