testing html and css for tabs and link color

--- a/Beta_deployment/infopage.html
+++ b/Beta_deployment/infopage.html
@@ -15,14 +15,17 @@
       <h3>By Groundbreak</h3>
       <p>
       <ul>
-        <li>Kamillah Hasham</li>
-        <li>Lisa Bourque</li>
-        <li>Cheyenne Hatter</li>
-        <li>Breanne Sjodin</li>
-        <li>Boris Nedev</li>
-        <li>Akshat Pandey</li>
-        <li>Jylee Halsted</li>
-        <li>Aiden Batten</li>
+        <li>Kamillah Hasham &nbsp;&nbsp;&nbsp;&nbsp; Producer</li>
+        <li>Cheyenne Hatter &nbsp;&nbsp;&nbsp;&nbsp; Lead Designer</li>
+        <li>Lisa Bourque &nbsp;&nbsp;&nbsp;&nbsp; Executive Producer</li>
+        <li></li>
+        <li>Aiden Batten &nbsp;&nbsp;&nbsp;&nbsp; Sound Designer</li>  
+        <li>Jylee Halsted &nbsp;&nbsp;&nbsp;&nbsp; Art Designer</li>
+        <li>Breanne Sjodin &nbsp;&nbsp;&nbsp;&nbsp; Art/Programmer</li>
+        <li></li>
+        <li>Boris Nedev &nbsp;&nbsp;&nbsp;&nbsp; Programmer</li>
+        <li>Akshat Pandey &nbsp;&nbsp;&nbsp;&nbsp; Programmer</li>
+      
       </ul>
       <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
       <a href="">Survey</a>
@@ -33,6 +36,12 @@
       color: white;
       text-align: center;
       font-family: "fonts/mplus-1m-regular.ttf";
+    }
+    a {
+      color: Purple;
+    }
+    a:visited{
+      color: Purple;
     }
 
     </style>
