--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="user-scalable=no">
-        <link rel="icon" href="icon/icon.png" type="image/png">
-        <link rel="apple-touch-icon" href="icon/icon.png">
-        <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-        <title>Midnight Movie Massacre</title>
-    </head>
+layout: default
     <body style="background-color: black">
       <h1><a href="">Midnight Movie Massacre</a></h1>
       <h3>By Groundbreak</h3>
@@ -31,30 +20,4 @@
       <a href="">Survey</a>
     </p>
     </body>
-    <style>
-    body {
-      color: white;
-      text-align: center;
-      font-family: "fonts/mplus-1m-regular.ttf";
-    }
-    ul{
-      list-style-type: none;
-  
-    }
-    a {
-      color: Purple;
-    }
-    a:visited{
-      color: Purple;
-    }
-    div{
-      display: inline;
-    }
-    .name{
-      text-align: right;
-    }
-    .role{
-      text-align: right;
-    }
-    </style>
-</html>
+
