--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@ title: stuff
         <li><div class="name">Akshat Pandey</div><div class="role">Programmer</div></li>
 
       </ul>
+        <table style="height:15em;">
+        <colgroup>
+           <col span="1">
+           <col span="1" width="100em">
+        </colgroup>
+        <tr><td class="name">Kamillah Hasham</td><td></td><td class="role">Producer</td></tr>
+        <tr><td class="name">Cheyenne Hatter</td><td></td><td class="role">Lead Designer</td></tr>
+        <tr><td class="name">Lisa Bourque</td><td></td><td class="role">Executive Producer</td></tr>
+        <tr height = 20px></tr>
+        <tr><td class="name">Aiden Batten</td><td></td><td class="role">Sound Designer</td></tr>
+        <tr><td class="name">Jylee Halsted</td><td></td><td class="role">Art Designer</td></tr>
+        <tr><td class="name">Breanne Sjodin</td><td></td><td class="role">Art/Programmer</td></tr>
+        <tr height = 20px></tr>
+        <tr><td class="name">Boris Nedev</td><td></td><td class="role">Programmer</td></tr>
+        <tr><td class="name">Akshat Pandey</td><td></td><td class="role">Programmer</td></tr>
+
+      </table>
+
       <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
       <a href="">Survey</a>
     </p>
