--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: stuff
 ---
     <body style="background-color: black">
-      <h1><a href="">Midnight Movie Massacre</a></h1>
+      <h1><a href="">Midnight Movie Massacre : Beta Release</a></h1>
       <h3>By Groundbreak</h3>
       <p>
       <ul>
