--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
 ---
 layout: default
-title: stuff
+title: Рейтинг книг fantasy-worlds.org
 ---
     <body style="background-color: black">
       <h1><a href="">Midnight Movie Massacre : Beta Release</a></h1>
       <h3>By Groundbreak</h3>
       <p>
-      <ul>
-        <li><div class="name">Kamillah Hasham</div><div class="role">Producer</div></li>
-        <li><div class="name">Cheyenne Hatter</div><div class="role">Lead Designer</div></li>
-        <li><div class="name">Lisa Bourque</div><div class="role">Executive Producer</div></li>
-        <li>space</li>
-        <li><div class="name">Aiden Batten</div><div class="role">Sound Designer</div></li>
-        <li><div class="name">Jylee Halsted</div><div class="role">Art Designer</div></li>
-        <li><div class="name">Breanne Sjodin</div><div class="role">Art/Programmer</div></li>
-        <li>space</li>
-        <li><div class="name">Boris Nedev</div><div class="role">Programmer</div></li>
-        <li><div class="name">Akshat Pandey</div><div class="role">Programmer</div></li>
-
-      </ul>
         <table style="height:15em;">
         <colgroup>
            <col span="1">
