--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Рейтинг книг fantasy-worlds.org
 ---
     <body style="background-color: black">
-      <h1><a href="">Midnight Movie Massacre : Beta Release</a></h1>
+      <h1><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h1>
       <h3>By Groundbreak</h3>
       <p>
         <table style="height:15em;">
@@ -25,7 +25,7 @@ title: Рейтинг книг fantasy-worlds.org
       </table>
 
       <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
-      <a href="">Survey</a>
+      <a href=""><h3>Survey</h3></a>
     </p>
     </body>
 
