--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Рейтинг книг fantasy-worlds.org
+title: Midnight Movie Massacre
 ---
     <body style="background-color: black">
       <h1><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h1>
