--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Midnight Movie Massacre
 ---
-    <body style="background-color: black">
+    <body>
       <h1><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h1>
       <h3>By Groundbreak</h3>
       <p>
