--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ title: Midnight Movie Massacre
       </table>
 
       <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
-      <a href=""><h2>Survey</h2></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link"><h2>Survey</h2></a>
     </p>
     </body>
