--- a/index.html
+++ b/index.html
@@ -28,3 +28,19 @@ title: Midnight Movie Massacre
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link"><h2>Survey</h2></a>
     </p>
     </body>
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
+    table td {
+        border:none;
+        background-color:black;
+    }
+    a{
+        color: purple;
+    }
+    a:visited{
+        color: purple;
+    }
+    </style>
