--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: Midnight Movie Massacre
 ---
     <body>
       <h1><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h1>
-      <h3>By Groundbreak</h3>
       <p>
         <table style="height:15em; border:none;">
         <colgroup>
            <col span="1">
            <col span="1" width="100em">
         </colgroup>
+            <tr><th>Team Groundbreak</th></tr>
         <tr><td class="name">Kamillah Hasham</td><td></td><td class="role">Producer</td></tr>
         <tr><td class="name">Cheyenne Hatter</td><td></td><td class="role">Lead Designer</td></tr>
         <tr><td class="name">Lisa Bourque</td><td></td><td class="role">Executive Producer</td></tr>
