--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Midnight Movie Massacre
 ---
     <body>
-      <h1><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h1>
+        <img src="breanne77.github.io/banner.png">
+      <h2><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h2>
       <p>
         <table style="height:15em; border:none;">
         <colgroup>
