--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title: Midnight Movie Massacre
 ---
     <body>
         <img src="breanne77.github.io/banner.png">
-      <h2><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h2>
+     
       <p>
+        <h2><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h2>
         <table style="height:15em; border:none;">
         <colgroup>
            <col span="1">
@@ -37,6 +38,13 @@ title: Midnight Movie Massacre
     table td {
         border:none;
         background-color:black;
+        color:white;
+    }
+    table th {
+        border:none;
+        background-color:black;
+        color:white;
+    
     }
     a{
         color: purple;
