--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Midnight Movie Massacre
 ---
     <body>
-        <img src="breanne77.github.io/banner.png">
+        <img src="banner.png">
      
       <p>
         <h2><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h2>
