--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Midnight Movie Massacre
       </table>
 
       <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link"><h2>Survey</h2></a>
+      <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link">Survey</a></h2>
     </p>
     </body>
 <style>
@@ -43,6 +43,9 @@ title: Midnight Movie Massacre
         background-color:black;
         color:white;
     
+    }
+    h2{
+        text-align:center;
     }
     a{
         color: purple;
