--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Midnight Movie Massacre
      
       <p>
         <h2><a href="breanne77.github.io/Final_Beta/">Midnight Movie Massacre : Beta Release</a></h2>
-        <table style="height:14em; border:none;">
+        <table style="border:none;">
         <colgroup>
            <col span="1">
            <col span="1" width="80em">
