--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Midnight Movie Massacre
         <img src="banner.png">
      
       <p>
-        <h2><a href="breanne77.github.io/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h2>
+        <h2><a href="/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h2>
         <table style="border:none;">
         <colgroup>
            <col span="1">
