--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ title: Midnight Movie Massacre
            <col span="1" width="80em">
         </colgroup>
             <tr><th>Team Groundbreak</th></tr>
-        <tr><td class="name">Kamillah Hasham</td><td></td><td class="role">Producer</td></tr>
-        <tr><td class="name">Cheyenne Hatter</td><td></td><td class="role">Lead Designer</td></tr>
-        <tr><td class="name">Lisa Bourque</td><td></td><td class="role">Executive Producer</td></tr>
-        <tr><td class="name">Aiden Batten</td><td></td><td class="role">Sound Designer</td></tr>
-        <tr><td class="name">Jylee Halsted</td><td></td><td class="role">Art Designer</td></tr>
-        <tr><td class="name">Breanne Sjodin</td><td></td><td class="role">Art/Programmer</td></tr>
-        <tr><td class="name">Boris Nedev</td><td></td><td class="role">Programmer</td></tr>
-        <tr><td class="name">Akshat Pandey</td><td></td><td class="role">Programmer</td></tr>
+        <tr><td class="name">Kamillah Hasham</td><td class="role">Producer</td></tr>
+        <tr><td class="name">Cheyenne Hatter</td><td class="role">Lead Designer</td></tr>
+        <tr><td class="name">Lisa Bourque</td><td class="role">Executive Producer</td></tr>
+        <tr><td class="name">Aiden Batten</td><td class="role">Sound Designer</td></tr>
+        <tr><td class="name">Jylee Halsted</td><td class="role">Art Designer</td></tr>
+        <tr><td class="name">Breanne Sjodin</td><td class="role">Art/Programmer</td></tr>
+        <tr><td class="name">Boris Nedev</td><td class="role">Programmer</td></tr>
+        <tr><td class="name">Akshat Pandey</td><td class="role">Programmer</td></tr>
 
       </table>
 
