--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Midnight Movie Massacre
     </body>
 <style>
     body {
-        background-color: black;
+        background-color: #120F1A;
         color: white;
     }
     table td {
