--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ title: Midnight Movie Massacre
     </body>
 <style>
     body {
-        background-color: #120F1A;
+        background-color: #110F19;
         color: white;
     }
     table td {
         border:none;
-        background-color:black;
+        background-color:#110F19;
         color:white;
     }
     table th {
         border:none;
-        background-color:black;
+        background-color:#110F19;
         color:white;
     
     }
