--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ title: Midnight Movie Massacre
         background-color: #110F19;
         color: white;
     }
+    table {
+        white-space: nowrap;
+    }
     table td {
         border:none;
         background-color:#110F19;
