--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Midnight Movie Massacre
 
       </table>
 
-      <div> Right and left arrows to move, enter to interact with objects. During a battle, use arrow keys for some and the enter button for others.</div>
+      <div> Use the right and left arrow keyss to move, and the enter key to interact with objects.</div>
       <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link">Survey</a></h2>
     </p>
     </body>
