--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Midnight Movie Massacre
 
       </table>
 
-      <div> Use the right and left arrow keyss to move, and the enter key to interact with objects.</div>
+      <div> Use the right and left arrow keys to move, and the enter key to interact with objects.</div>
       <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link">Survey</a></h2>
     </p>
     </body>
