--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Midnight Movie Massacre
         <img src="banner.png">
      
       <p>
-        <h2><a href="/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h2>
+        <h2><a href="/Final_Gold/index.html">Midnight Movie Massacre : GOLD Release</a></h2>
+        <h3><a href="/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h3>
         <table style="border:none;">
         <colgroup>
         
@@ -24,7 +25,8 @@ title: Midnight Movie Massacre
 
       </table>
 
-      <div> Use the right and left arrow keys to move, and the enter key to interact with objects.</div>
+      <div> Use the right and left arrow keys to move, and the Enter key or Spacebar to interact with objects./n
+        Attack with Arrow Keys when using Zip's attack, and Enter or Spacebar for the remaining character attacks</div>
       <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSe8ikPXwHXqrEdM2VMrD8wjG9wCKmxFh-lByHSkF04K3RjPEg/viewform?usp=sf_link">Survey</a></h2>
     </p>
     </body>
