--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Midnight Movie Massacre
 
       </table>
 
-      <div> Use the right and left arrow keys to move, and the Enter key or Spacebar to interact with objects./n
+      <div> Use the right and left arrow keys to move, and the Enter key or Spacebar to interact with objects.<br>
         Attack with Arrow Keys when using Zip's attack, and Enter or Spacebar for the remaining character attacks</div>
      
     </p>
