--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: default
 title: Midnight Movie Massacre
 ---
-    <body>
+    <div class="body">
         <img src="banner.png">
      
       <p>
-        <h2><a href="/Final_Gold/index.html">Midnight Movie Massacre : GOLD Release</a></h2>
+        <h2><a href="/Final_gold_test/index.html">Midnight Movie Massacre : GOLD Release</a></h2>
         <h3><a href="/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h3>
         <table style="border:none;">
         <colgroup>
@@ -29,9 +29,9 @@ title: Midnight Movie Massacre
         Attack with Arrow Keys when using Zip's attack, and Enter or Spacebar for the remaining character attacks</div>
      
     </p>
-    </body>
+    </div>
 <style>
-    body {
+    .body {
         background-color: #110F19;
         color: white;
     }
