--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ title: Midnight Movie Massacre
     </p>
     </div>
 <style>
+    body{
+        background-color: #110F19;
+    }
     .body {
         background-color: #110F19;
         color: white;
