--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Midnight Movie Massacre
         <img src="banner.png">
      
       <p>
-        <h2><a href="/Final_gold_test/index.html">Midnight Movie Massacre : GOLD Release</a></h2>
+        <h2><a href="/Gold_release/index.html">Midnight Movie Massacre : GOLD Release</a></h2>
         <h3><a href="/Final_Beta/index.html">Midnight Movie Massacre : Beta Release</a></h3>
         <table style="border:none;">
         <colgroup>
